--- a/src/app/_layout/footer.html
+++ b/src/app/_layout/footer.html
@@ -16,7 +16,7 @@
     </div>
   </footer>
 
-  <footer class="page-footer teal lighten-2 ">
+  <footer class="page-footer light-blue lighten-1">
     <div class="container ">
       <div class="row ">
         <div class="col l6 s12 ">
