--- a/src/app/_layout/header.html
+++ b/src/app/_layout/header.html
@@ -5,20 +5,33 @@
         <img src="/images/home.png" id="home">
       </a>
       <img src="/images/main_logo.png" id="logo">
-      <ul class="right hide-on-med-and-down ">
-        <li class="about-us-header">
-          <a href="#" class="black-text menu">
-            <i class="fa fa-globe fa" aria-hidden="true"></i> About us</a>
-        </li>
-        <li>
-          <a href="#modal1" class="black-text menu">
-            <i class="fa fa-sign-in fa" aria-hidden="true"></i> Login</a>
-        </li>
-        <li>
-          <a href="#modal2" class="black-text menu">
-            <i class="fa fa-heartbeat" aria-hidden="true"></i> Signup</a>
-        </li>
-      </ul>
+      {% if not user %}
+        <ul class="right hide-on-med-and-down ">
+          <li class="about-us-header">
+            <a href="#" class="black-text menu">
+              <i class="fa fa-globe fa" aria-hidden="true"></i> About us</a>
+          </li>
+          <li>
+            <a href="#modal1" class="black-text menu">
+              <i class="fa fa-sign-in fa" aria-hidden="true"></i> Login</a>
+          </li>
+          <li>
+            <a href="#modal2" class="black-text menu">
+              <i class="fa fa-heartbeat" aria-hidden="true"></i> Signup</a>
+          </li>
+        </ul>
+        <ul id="nav-mobile" class="side-nav">
+          <li>
+            <a href="#" class="black-text" onclick=" scroll_to_aboutus() ">About us</a>
+          </li>
+          <li>
+            <a href="#" class="black-text ">Login</a>
+          </li>
+          <li>
+            <a href="# " class="black-text ">Signup</a>
+          </li>
+        </ul>
+      {% endif %}
     </div>
   </nav>
 
@@ -31,33 +44,33 @@
     </div>
     <div class="modal-content">
       <div class="row">
-        <form action="api/users/login" method="POST" class="col s12">
+        <form action="/login" method="POST" class="col s12">
 
           <div class="row">
             <div class="input-field col s12">
-              <input id="email" type="text" name="username" class="validate">
+              <input type="text" name="username" class="validate">
               <label for="email">Username</label>
             </div>
           </div>
 
           <div class="row">
             <div class="input-field col s12">
-              <input id="password" type="password" name="password" class="validate">
+              <input type="password" name="password" class="validate">
               <label for="password">Password</label>
             </div>
           </div>
 
           <div class="row">
             <div class="col s12 center">
-              <button id="login-button" type="submit" class="waves-effect waves-light btn green">Login</button>
+              <button type="submit" class="waves-effect waves-light btn green">Login</button>
             </div>
           </div>
         </form>
 
-        <form action="api/users/auth/fb" method="GET">
+        <form action="/auth/google" method="GET">
           <div class="row">
             <div class="col s12 center">
-              <button id="login-fb-button" type="submit" class="waves-effect waves-light btn green">Login with Facebook</button>
+              <button id="login-fb-button" type="submit" class="waves-effect waves-light btn green">Login with Google</button>
             </div>
           </div>
         </form>
@@ -74,7 +87,7 @@
     </div>
     <div class="modal-content">
       <div class="row">
-        <form action="api/users/signup" method="POST" class="col s12">
+        <form action="users/signup" method="POST" class="col s12">
 
           <div class="row">
             <div class="input-field col s12">
