Add quotes done

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -66,14 +66,16 @@
   <div class="col s8 l8">
     <div class="row">
       <div class="col s12 l12">
-        <div id="quote" class="block_slidedown">
+        <div class="block_slidedown quote">
           <blockquote>
-            Quote' today:
-            <br> {{ quote }}
+            Những câu nói hay:
+            <br>
+            {{ quote }}
             <br>
           </blockquote>
         </div>
         <br>
+
         <div id="search" class="block_slidedown">
           <div class="">
             <i class="fa fa-search" aria-hidden="true">Tìm Kiếm</i>
@@ -91,11 +93,10 @@
           </div>
         </div>
         <br>
+
         <div id="exams" class="block_slidedown">
           <h6> Danh sách đề thi:</h6>
-
-          <h6>
-            <i class="fa fa-star yellow-text fa-1x" aria-hidden="true"></i> Dễ</h6>
+          <h6><i class="fa fa-star yellow-text fa-1x" aria-hidden="true"></i> Dễ</h6>
           <ul class="collapsible" data-collapsible="accordion">
             <li class='checkFirst'>
               <div class="collapsible-header name_of_exam">
