--- a/src/app/_layout/layout.html
+++ b/src/app/_layout/layout.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" type="text/css" href="/font-awesome/css/font-awesome.min.css">
     {% block cssLib %} {% endblock %}
 
-    <link rel="stylesheet" type="text/css" href="/css/home.css">
     <link rel="stylesheet" type="text/css" href="/css/index.css">
     {% block cssCustom %}{% endblock %}
 </head>
@@ -19,8 +18,7 @@
 <body>
 {% include "_layout/header.html" %}
 
-{% block content %}
-{% endblock %}
+{% block content %} {% endblock %}
 
 {% include "_layout/footer.html" %}
 
