--- a/src/app/_layout/header.html
+++ b/src/app/_layout/header.html
@@ -1,7 +1,7 @@
 <div id="header">
   <nav class="white">
     <div class="nav-wrapper nav-wrapper-login">
-      <a href="/">
+      <a href="/home">
         <img src="/images/home.png" id="home">
       </a>
       <img src="/images/main_logo.png" id="logo">
