--- a/src/app/_layout/layout.html
+++ b/src/app/_layout/layout.html
@@ -17,6 +17,21 @@
 </head>
 
 <body>
+  <div class="page-loader">
+    <div class="preloader-wrapper big active">
+      <div class="spinner-layer spinner-blue-only">
+        <div class="circle-clipper left">
+          <div class="circle"></div>
+        </div>
+        <div class="gap-patch">
+          <div class="circle"></div>
+        </div>
+        <div class="circle-clipper right">
+          <div class="circle"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 {% include "_layout/header.html" %}
 
 {% block content %} {% endblock %}
