--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -49,19 +49,20 @@
           <a href="/home/math">Toán</a>
         </li>
         <li>
-          <a href="/home/phy">Lý</a>
+          <a href="/home/physic">Lý</a>
         </li>
         <li>
-          <a href="/home/chem">Hoá</a>
+          <a href="/home/chemistry">Hoá</a>
         </li>
         <li>
-          <a href="/home/bio">Sinh</a>
+          <a href="/home/biology">Sinh</a>
         </li>
         <li>
-          <a href="/home/eng">Anh</a>
+          <a href="/home/english">Anh</a>
         </li>
       </ul>
     </div>
+    
   </div>
   <div class="col s8 l8">
     <div class="row">
@@ -78,7 +79,7 @@
 
         <div id="search" class="block_slidedown">
           <div class="">
-            <i class="fa fa-search" aria-hidden="true">Tìm Kiếm</i>
+            <i class="fa fa-search" aria-hidden="true">Tìm kiếm bài thi</i>
             <div class="row">
               <div class="col s8 l10">
                 <input type="text" id="key" onkeydown="onEnterKey()">
@@ -87,9 +88,7 @@
                 <div class="btn" onclick="search()">Tìm</div>
               </div>
             </div>
-            <div id="result">
-
-            </div>
+            <div id="result"></div>
           </div>
         </div>
         <br>
@@ -98,20 +97,23 @@
           <h6> Danh sách đề thi:</h6>
           <h6><i class="fa fa-star yellow-text fa-1x" aria-hidden="true"></i> Dễ</h6>
           <ul class="collapsible" data-collapsible="accordion">
-            <li class='checkFirst'>
-              <div class="collapsible-header name_of_exam">
-                <i class="fa fa-angle-double-right" aria-hidden="true"></i>{{name}}</div>
-              <div class="collapsible-body">
-                <i class="fa fa-eye right fa-1x " aria-hidden="true"></i>
-                <div>Facebook is an American for-profit corporation and an online social media and social networking service based
-                  in Menlo Park, California. The Facebook website was launched on February 4, 2004, by Mark Zuckerberg, along
-                  with fellow Harvard College students and roommates, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz,
-                  and Chris Hughes.</div>
-                <div class="center">
-                  <a class="waves-effect waves-light btn" href="/exam/?nameOfExam={{name}}&subject={{subject}}">Làm đề</a>
-                </div>
-              </div>
-            </li>
+            {% for exam in exams %}
+              {% if exam.level == 'easy' %}
+                <li class="checkFirst">
+                  <div class="collapsible-header name_of_exam">
+                    <i class="fa fa-angle-double-right" aria-hidden="true"></i>{{ exam.name }}</div>
+                  <div class="collapsible-body">
+                    <i class="fa fa-eye right fa-1x " aria-hidden="true"></i>
+                    <div>Facebook is an American for-profit corporation and an online social media and social networking service based in Menlo
+                      Park, California. The Facebook website was launched on February 4, 2004, by Mark Zuckerberg, along with fellow Harvard
+                      College students and roommates, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz, and Chris Hughes.</div>
+                    <div class="center">
+                      <a class="waves-effect waves-light btn" href="/exam?nameOfExam={{ exam.name }}&subject={{ exam.subject }}">Làm đề thi</a>
+                    </div>
+                  </div>
+                </li>
+              {% endif %}
+            {% endfor %}
           </ul>
 
           <h6>
@@ -119,41 +121,47 @@
             <i class="fa fa-star yellow-text fa-1x" aria-hidden="true"></i>
             Trung bình</h6>
           <ul class="collapsible" data-collapsible="accordion">
-            <li class='checkFirst'>
-              <div class="collapsible-header name_of_exam">
-                <i class="fa fa-angle-double-right" aria-hidden="true"></i>{{this.name}}</div>
-              <div class="collapsible-body">
-                <i class="fa fa-eye right fa-1x" aria-hidden="true"></i>
-                <div>Facebook is an American for-profit corporation and an online social media and social networking service based
-                  in Menlo Park, California. The Facebook website was launched on February 4, 2004, by Mark Zuckerberg, along
-                  with fellow Harvard College students and roommates, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz,
-                  and Chris Hughes.</div>
-                <div class="center">
-                  <a class="waves-effect waves-light btn" href="/exam/?nameOfExam={{this.name}}&subject={{subject}}">Làm đề</a>
-                </div>
-              </div>
-            </li>
-          </ul>
+            {% for exam in exams %}
+              {% if exam.level == 'medium' %}
+                <li class="checkFirst">
+                  <div class="collapsible-header name_of_exam">
+                    <i class="fa fa-angle-double-right" aria-hidden="true"></i>{{ exam.name }}</div>
+                  <div class="collapsible-body">
+                    <i class="fa fa-eye right fa-1x " aria-hidden="true"></i>
+                    <div>Facebook is an American for-profit corporation and an online social media and social networking service based in Menlo
+                      Park, California. The Facebook website was launched on February 4, 2004, by Mark Zuckerberg, along with fellow Harvard
+                      College students and roommates, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz, and Chris Hughes.</div>
+                    <div class="center">
+                      <a class="waves-effect waves-light btn" href="/exam?nameOfExam={{ exam.name }}&subject={{ exam.subject }}">Làm đề thi</a>
+                    </div>
+                  </div>
+                </li>
+              {% endif %}
+            {% endfor %}
+            
           <h6>
             <i class="fa fa-star yellow-text fa-1x" aria-hidden="true"></i>
             <i class="fa fa-star yellow-text fa-1x" aria-hidden="true"></i>
             <i class="fa fa-star yellow-text fa-1x" aria-hidden="true"></i>
             Khó</h6>
           <ul class="collapsible" data-collapsible="accordion">
-            <li class='checkFirst'>
-              <div class="collapsible-header name_of_exam">
-                <i class="fa fa-angle-double-right" aria-hidden="true"></i>{{this.name}}</div>
-              <div class="collapsible-body">
-                <i class="fa fa-eye right" aria-hidden="true"></i>
-                <div>Facebook is an American for-profit corporation and an online social media and social networking service based
-                  in Menlo Park, California. The Facebook website was launched on February 4, 2004, by Mark Zuckerberg, along
-                  with fellow Harvard College students and roommates, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz,
-                  and Chris Hughes.</div>
-                <div class="center">
-                  <a class="waves-effect waves-light btn" href="/exam/?nameOfExam={{this.name}}&subject={{subject}}">Làm đề</a>
-                </div>
-              </div>
-            </li>
+            {% for exam in exams %}
+              {% if exam.level == 'hard' %}
+                <li class="checkFirst">
+                  <div class="collapsible-header name_of_exam">
+                    <i class="fa fa-angle-double-right" aria-hidden="true"></i>{{ exam.name }}</div>
+                  <div class="collapsible-body">
+                    <i class="fa fa-eye right fa-1x " aria-hidden="true"></i>
+                    <div>Facebook is an American for-profit corporation and an online social media and social networking service based in Menlo
+                      Park, California. The Facebook website was launched on February 4, 2004, by Mark Zuckerberg, along with fellow Harvard
+                      College students and roommates, Eduardo Saverin, Andrew McCollum, Dustin Moskovitz, and Chris Hughes.</div>
+                    <div class="center">
+                      <a class="waves-effect waves-light btn" href="/exam?nameOfExam={{ exam.name }}&subject={{ exam.subject }}">Làm đề thi</a>
+                    </div>
+                  </div>
+                </li>
+              {% endif %}
+            {% endfor %}
           </ul>
         </div>
       </div>
@@ -165,6 +173,12 @@
       <div class="divider"></div>
       <table class="striped">
         <tbody>
+          {% for topUser in topTenUser %}
+            <tr>
+              <td>{{ loop.index }}. {{ topUser.username }}</td>
+              <td>{{ topUser.point }}</td>
+            </tr>
+          {% endfor %}
         </tbody>
       </table>
   </div>
