--- a/src/app/exams/exams.html
+++ b/src/app/exams/exams.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row">
   <div class="col s9 l9">
-    <object type="application/pdf" width="100%" height="1400px" data="/exams/Math/Đề thi môn Toán Sở GD Hải Dương.pdf?#zoom=120&scrollbar=0&toolbar=0&navpanes=0"
+    <object type="application/pdf" width="100%" height="1400px" data="{{ exam.examspath }}?#zoom=120&scrollbar=0&toolbar=0&navpanes=0"
       id="pdf_content">
       <p>ERROR</p>
     </object>
@@ -33,7 +33,7 @@
 
     <div>
       <form id="answer-form" class="" action="/result" method="post">
-        {% for i in range(1, 51) -%}
+        {% for i in range(1, exam.numberOfQuestions + 1) -%}
         <br>{% if i < 10 %}0{% endif %}{{ i }}.
         <input type="radio" name="q{{ i }}" value="A" id="{{ i }}_A">
         <label for="{{ i }}_A">A </label>
