--- a/src/app/exams/result.html
+++ b/src/app/exams/result.html
@@ -10,7 +10,7 @@
   <div class="col s8 l8">
     <div>
       <div class="center-align">
-        <i class="fa fa-cubes fa-3x" aria-hidden="true"></i> Result
+        <i class="fa fa-cubes fa-3x" aria-hidden="true"></i> Kết quả bài thi
       </div>
     </div>
     <br>
@@ -62,7 +62,7 @@
       <span>Đáp án</span>
     </div>
     <div class="row">
-      <div class="col s3 l3">
+      <div class="col s12 m3">
         <table>
           <tr>
             <th>Câu hỏi</th>
@@ -72,13 +72,13 @@
           {% for answer in range(1, 14) %}
             <tr>
               <td>{{ answer }}</td>
-              <td>{{ answersUser[answer - 1] }}</td>
+              <td>{{ userAnswer[answer - 1] }}</td>
               <td>{{ trueAnswer[answer - 1] }}</td>
             </tr>
           {% endfor %}
         </table>
       </div>
-      <div class="col s3 l3">
+      <div class="col s12 m3">
         <table>
           <tr>
             <th>Câu hỏi</th>
@@ -88,13 +88,13 @@
           {% for answer in range(14, 27) %}
           <tr>
             <td>{{ answer }}</td>
-            <td>{{ answersUser[answer - 1] }}</td>
+            <td>{{ userAnswer[answer - 1] }}</td>
             <td>{{ trueAnswer[answer - 1] }}</td>
           </tr>
           {% endfor %}
         </table>
       </div>
-      <div class="col s3 l3">
+      <div class="col s12 m3">
         <table>
           <tr>
             <th>Câu hỏi</th>
@@ -104,13 +104,13 @@
           {% for answer in range(27, 40) %}
           <tr>
             <td>{{ answer }}</td>
-            <td>{{ answersUser[answer - 1] }}</td>
+            <td>{{ userAnswer[answer - 1] }}</td>
             <td>{{ trueAnswer[answer - 1] }}</td>
           </tr>
           {% endfor %}
         </table>
       </div>
-      <div class="col s3 l3">
+      <div class="col s12 m3">
         <table>
           <tr>
             <th>Câu hỏi</th>
@@ -120,7 +120,7 @@
           {% for answer in range(40, 51) %}
           <tr>
             <td>{{ answer }}</td>
-            <td>{{ answersUser[answer - 1] }}</td>
+            <td>{{ userAnswer[answer - 1] }}</td>
             <td>{{ trueAnswer[answer - 1] }}</td>
           </tr>
           {% endfor %}
@@ -137,10 +137,5 @@
         </table>
       </div>
     </div>
-    <div class="col s3 l3">
-    </div>
   </div>
-  
 {% endblock %}
-
-
