--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -43,3 +43,16 @@
 .index-banner{
   width: 100%;
 }
+
+.page-loader {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #f3f3f3;
+  z-index: 999999999;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
