--- a/src/app/_layout/layout.html
+++ b/src/app/_layout/layout.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="https://uet.vnu.edu.vn/wp-content/uploads/2017/02/uet_logo-50x50.png" sizes="32x32" />
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="/font-awesome/css/font-awesome.min.css">
     {% block cssLib %} {% endblock %}
